*mv* moved a lot of code into 3rdparty directory *fix* keyring fix when nothing is found and the destructor is called with session==None

--- a/static/newtab/newtab.html
+++ b/static/newtab/newtab.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <title>New Tab</title>
-    <script type="text/javascript" charset="utf-8" src="jquery-1.7.min.js"></script>
-    <script type="text/javascript" charset="utf-8" src="sjcl.js"></script>
+    <script type="text/javascript" charset="utf-8" src="3rdparty/jquery-1.7.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="3rdparty/sjcl.js"></script>
     <script type="text/javascript" charset="utf-8" src="newtab.js"></script>
-    <script type="text/javascript" charset="utf-8" src="socket.io-1.4.5.js"></script>
+    <script type="text/javascript" charset="utf-8" src="3rdparty/socket.io-1.4.5.js"></script>
     <script type="text/javascript" charset="utf-8" src="socket.js"></script>
-    <link rel="stylesheet" href="app.css" type="text/css" />
-    <link rel="stylesheet" href="prettify.css" type="text/css" />
+    <link rel="stylesheet" href="3rdparty/app.css" type="text/css" />
+    <link rel="stylesheet" href="3rdparty/prettify.css" type="text/css" />
     <link rel="stylesheet" href="main.css" type="text/css" />
   </head>
   <body>
