--- a/static/newtab/newtab.html
+++ b/static/newtab/newtab.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" charset="utf-8" src="newtab.js"></script>
     <script type="text/javascript" charset="utf-8" src="3rdparty/socket.io-1.4.5.js"></script>
     <script type="text/javascript" charset="utf-8" src="3rdparty/Chart.bundle.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="3rdparty/chartjs-plugin-annotation.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="socket.js"></script>
     <link rel="stylesheet" href="3rdparty/app.css" type="text/css" />
     <link rel="stylesheet" href="3rdparty/prettify.css" type="text/css" />
